# fungibles_api_example

./: Cargo.toml  README.md  lib.rs
