[package]
name = "api_example"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "=5.0.0", default-features = false, features = ["ink-debug"] }
pop-api = { path = "../pop-node/pop-api", default-features = false, features = ["fungibles"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
drink = { path = "../drink/drink" }
frame-system = { version = "29.0.0", default-features = false }
frame-support = { version = "29.0.2", default-features = false }
pop-runtime-devnet = { path = "../pop-node/runtime/devnet", default-features = false }
#pop-chain-extension = { path = "../pop-node/extension", default-features = false }
ink_sandbox = { path = "../ink/crates/e2e/sandbox" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "frame-system/std",
    "frame-support/std",
    "pop-api/std",
    "pop-runtime-devnet/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
